@@ -1,3 +1,12 @@
+2012-06-07  Sebastien Binet  <binet@cern.ch>
+
+	* tagging PyUtils-00-12-09
+	* revert changes from PyUtils-00-12-08 and make
+	  pool_insertFileToCatalog and pool_extractFileIdentifier less verbose
+	* M python/AthFile/impl.py
+	* M bin/pool_insertFileToCatalog.py
+	* M bin/pool_extractFileIdentifier.py
+
 2012-06-06  Sebastien Binet  <binet@cern.ch>
 
 	* tagging PyUtils-00-12-08
